package org.launchcode.studio7;

public interface Spinnable {
    void spinDisc();
}
